--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
-    "start": "ts-node src/server/server.ts"
+    "start": "ts-node server/server.ts"
   },
   "keywords": [],
   "author": "",
