--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.14",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.8",
