--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,9 @@
     "@types/express": "^5.0.1",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.13.14",
+    "@types/node": "^22.14.1",
     "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
