--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js"
   },
